Use the Number.valueOf() factory methods for speed